# chia-dev-tools

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  activated.ps1  activated.py  activated.sh  build.py  chialisp.ps1  chialisp.py  mypy.ini  pyproject.toml  ruff.toml  setup.py
.github/workflows/: codeql-analysis.yml  precommit.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  run-test-suite.yml  snyk-container.yml  super-linter.yml  test-blockchain-main.yml
cdt/cmds/: chia_inspect.py  cli.py  clsp.py  rpc.py
cdt/test/: __init__.py  test_skeleton.py
cdv/: __init__.py
cdv/clibs/: cat_puz_hash.clsp
cdv/cmds/: chia_inspect.py  cli.py  clsp.py  rpc.py  sim.py  sim_utils.py  util.py
cdv/test/: __init__.py  test_skeleton.py
cdv/util/: keys.py  load_clvm.py  sign_coin_spends.py
chialisp/: __init__.py  cli.py
chialisp/cmds/: chia_inspect.py  cli.py  clsp.py  rpc.py
chialisp/test/: __init__.py  test_skeleton.py
chialisp/util/: keys.py
simulator-docker/: Dockerfile  docker-entrypoint.sh  docker-healthcheck.sh  docker-install.sh  docker-start.sh
std/: constants.py  hash.py  load_clvm.py  program.py  sized_bytes.py
std/clvm/: helloworld.clvm  helloworld.clvm.f02cca1a7f051ecdf9942c815abc6805cf20d806762e35448cc4e97b6d43144d.hex  p2_delegated_puzzle_or_hidden_puzzle.clvm  test.clvm  test.clvm.E3716D4E9F2F19B210ACDCD5D8F67A91342ECF768674AF5C31B81FB9FAA161AC.hex
std/examples/: helloworld.py  standard_transaction.py
std/sim/: block_rewards.py  bundle_tools.py  coinbase.py  cost_calculator.py  default_constants.py  generator.py  mempool_check_conditions.py  node.py  spend_bundle_validation.py
std/spends/: defaults.py  generator_loader.py  lowlevel_generator.py  p2_conditions.py  p2_delegated_puzzle_or_hidden_puzzle.py  rom_bootstrap_generator.py
std/test/: __init__.py
std/types/: announcement.py  coin.py  coin_record.py  coin_signature.py  coin_solution.py  condition_var_pair.py  condition_with_args.py  consensus_constants.py  full_block.py  generator_types.py  ints.py  program.py  (+4 more)
tests/: build-init-files.py  template.clvm  test_coin.py  test_multispend.py  test_skeleton.py
(+35 files in other folders)
