[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=4.1.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "unknown-no-.git-directory"
local_scheme = "no-local-version"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

# vertical hanging indent mode also used in black configuration
multi_line_output = 3

# necessary because black expect the trailing comma
include_trailing_comma = true

# black compatibility
force_grid_wrap = 0

# black compatibility
use_parentheses = true

# black compatibility
ensure_newline_before_comments = true

# we chose 120 as line length
line_length = 120
